cabal-version: 3.8
name: roguelike
version: 0.1.0.0
license: MIT
author: Risto Flink
maintainer: Risto Flink <kenssi@gmail.com>
description: A roguelike game written in Haskell

common warnings
  ghc-options: -Wall

executable roguelike
  import: warnings
  main-is: Main.hs
  other-modules: Types
                , Dungeon
  build-depends: base >=4.14 && < 5
               , random >= 1.2 && <1.3
  hs-source-dirs: .
  default-language: GHC2021
